--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 	<meta charset="UTF-8">
 	<title>Document</title>
 	<link rel="stylesheet" href="./css/base.css">
+	<!-- yike添加的 -->
+	<script src="./js/jquery.min.js"></script>
 </head>
 <body>
 	<h1>登录功能</h1>
